Last section done with responsive

--- a/index.html
+++ b/index.html
@@ -205,6 +205,57 @@
                 </div>
             </div>
         </section>
+        <!-- last section -->
+
+        <section class="my-24 flex flex-col-reverse lg:flex-row gap-24 justify-center items-center mx-4">
+            <!-- single card container -->
+            <div class=" lg:w-1/2">
+                <!-- single card 1-->
+                <div class="drop-shadow-lg bg-slate-50 rounded-2xl p-7 flex gap-9 mb-6">
+                    <img class="w-20" src="icons/house.png" alt="">
+                    <!-- card content -->
+                    <div class="space-y-3">
+                        <h1 class="text-[#363958] font-bold text-2xl">Find the Perfect Fit</h1>
+                        <p class="text-[#3E3E3E] font-normal text-base">Everybody is different, which is why we
+                            offer styles for every body.</p>
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+                <!-- single card 2-->
+                <div class="drop-shadow-lg bg-slate-50 rounded-2xl p-7 flex gap-9 mb-6">
+                    <img class="w-20" src="icons/box.png" alt="">
+                    <!-- card content -->
+                    <div class="space-y-3">
+                        <h1 class="text-[#363958] font-bold text-2xl">Free Exchanges</h1>
+                        <p class="text-[#3E3E3E] font-normal text-base">One of the many reasons you can shop
+                            with peace of mind.</p>
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+                <!-- single card 3 -->
+                <div class="drop-shadow-lg bg-slate-50 rounded-2xl p-7 flex gap-9 mb-6">
+                    <img class="w-20" src="icons/question.png" alt="">
+                    <!-- card content -->
+                    <div class="space-y-3">
+                        <h1 class="text-[#363958] font-bold text-2xl">Contact Our Seller</h1>
+                        <p class="text-[#3E3E3E] font-normal text-base">They are here to help you. That's quite 
+                            literally what we pay them for.</p>
+                    </div>
+                    <div>
+
+                    </div>
+                </div>
+                
+            </div>
+            <div class="lg:w-1/2">
+                <img src="images/shopping.png" alt="">
+            </div>
+            
+        </section>
     </main>
 </body>
 
