--- a/index.html
+++ b/index.html
@@ -24,9 +24,17 @@
 </head>
 
 <body>
-    <header class="bg-[#FFFBF0] px-4 md:px-32 py-20">
+    <header class="bg-[#FFFBF0] px-4 md:px-32 py-12">
         <!-- --------------nav -->
-        <nav></nav>
+        <nav class="flex flex-col md:items-center justify-between mb-5 lg:flex-row ">
+            <img class="w-52" src="icons/logo.png" alt="">
+            <div class="hidden mt-5 md:flex gap-14 text-[#3C3C3C] font-roboto text-base font-medium leading-6">
+                <a href="">Home</a>
+                <a href="">Product</a>
+                <a href="">About us</a>
+                <a href="">Contact us</a>
+            </div>
+        </nav>
         <!-- ..............banner -->
         <div class="flex flex-col md:flex-row justify-between items-center">
             <div class="space-y-3">
@@ -34,7 +42,7 @@
                         Penguins</span>
                     <br> <span class="text-[#363958]">of Winter</span>
                 </h1>
-                <p>Lorem Ipsum is simply dummy text of the printing
+                <p class="w-96">Lorem Ipsum is simply dummy text of the printing
                     and typesetting industry.</p>
                 <button
                     class="bg-gradient-to-r from-[#A4BC46] to-[#85A019] rounded-xl py-4 px-9 text-white text-base font-semibold uppercase">
